# noisy_doc_clf

./: .gitignore  README.md  pyproject.toml
notebooks/: augraphy.ipynb  baselines.ipynb  data_gen-Copy1.ipynb  data_gen.ipynb  florence-ft.ipynb  florence2.ipynb
