[project]
name = "noisy-doc-clf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ajkdrag", email = "altamashjahangirkhan123@gmail.com"},
]
dependencies = [
    "torch>=2.3.0",
    "matplotlib>=3.8.4",
    "jupyter>=1.0.0",
    "structlog>=24.1.0",
    "opencv-python>=4.9.0.80",
    "timm>=1.0.8",
    "albumentations>=1.4.6",
    "torchvision>=0.18.0",
    "torchsummary>=1.5.1",
    "lightning>=2.2.4",
    "torchmetrics[detection]>=1.4.0",
    "faster-coco-eval>=1.5.4",
    "hydra-core>=1.3.2",
    "einops>=0.8.0",
    "augraphy>=8.2.6",
    "gdown>=5.2.0",
    "accelerate>=0.33.0",
    "fastai>=2.7.15",
    "flash-attn>=2.6.3",
    "quanto>=0.2.0",
    "bitsandbytes>=0.43.3",
    "peft>=0.12.0",
    "gguf>=0.9.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.44.0",
    "gradio>=4.41.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
nb = "jupyter-lab --no-browser --ip=0.0.0.0 --port=8001 --NotebookApp.token=''"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=noisy-doc-clf",
    "datasets>=2.20.0",
]
